# hexlet-my-first-workflow

./: Makefile  README.md  pyproject.toml
.github/workflows/: blank.yml  say-hello.yml
say_hello/scripts/: say-hello.py
